<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.levyy.camera.Camera"
    android:showAsAction="always">
    <item android:id="@+id/PicturePace"
        android:numericShortcut="3"
        android:title="@string/PicturePace"/>
    <item android:id="@+id/WaitTimeBeforRetake"
        android:numericShortcut="30"
        android:title="@string/WaitTimeBeforRetake"/>
    <item android:id="@+id/SmilingPercentage"
        android:numericShortcut="50"
        android:title="@string/SmilingPercentage" />
    <item android:id="@+id/NumOfFaces"
        android:numericShortcut="2"
        android:title="@string/NumOfFaces" />
    <group android:checkableBehavior="all">
        <item android:id="@+id/faceBox"
            android:checked="true"
            android:title="@string/faceBox" />
        <item android:id="@+id/faceLandmarks"
            android:title="@string/faceLandmarks" />
        <item android:id="@+id/showWebsocketMessages"
            android:checked="true"
            android:title="Show Websocket messages in title"/>
    </group>
</menu>